move & rename (#586)
* move and rename